Fixed horizontal scrollbar bug

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -41,3 +41,7 @@ a
 	background: jet
 	height: 100%
 	overflow: hidden
+
+/* _____ COMPONENT FIXES ________ */
+.scrollbars-override
+	overflow-x: hidden !important;
